<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Telepictionary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="toDraw">To Draw</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="clear">Clear</string>
    <string name="toWrite">Next</string>
    <string name="brushsize">Size</string>
    <string name="color">Color</string>
    <string name="new_game">Start A New Game</string>
    <string name="view_saved">View Saved Games</string>
    <string name="menu">Back To Main Menu</string>


</resources>