<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/start_btn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#FF000000"
        android:contentDescription="@string/start_new"
        android:text="@string/new_game"
        android:textColor="#FF33b5e5" />

    <Button
        android:id="@+id/saved_btn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#FF000000"
        android:contentDescription="@string/toWrite"
        android:text="@string/view_saved"
        android:textColor="#FF33b5e5" />

</LinearLayout>