<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:orientation="vertical"
    tools:context=".DrawActivity" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FF000000"
        android:text="This is where the sentence goes!"
        android:textColor="#FF33b5e5" />

    <diaz.jack.telepictionary.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/color_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FF000000"
                android:contentDescription="@string/color"
                android:text="@string/color"
                android:textColor="#FF33b5e5" />

            <Button
                android:id="@+id/draw_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FF000000"
                android:contentDescription="@string/brush"
                android:text="@string/brushsize"
                android:textColor="#FF33b5e5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/new_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FF000000"
                android:contentDescription="@string/start_new"
                android:text="@string/clear"
                android:textColor="#FF33b5e5" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FF000000"
                android:contentDescription="@string/toWrite"
                android:text="@string/toWrite"
                android:textColor="#FF33b5e5" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>